--- a/css/style.css
+++ b/css/style.css
@@ -2,205 +2,199 @@
 :root {
   --violet: hsl(257, 40%, 49%);
   --Soft_Magenta: hsl(300, 69%, 71%);
+  --white: hsl(0, 0%, 100%);
+  --open_Sans: "Open Sans", sans-serif;
+  --Poppins: "Poppins", sans-serif;
+}
+
+html {
+  font-size: 62.5%;
 }
 
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  transition: all 0.5s ease-in-out;
 }
 
 body {
   background-color: var(--violet);
   background-image: url(../images/bg-mobile.svg);
   background-repeat: no-repeat;
-  background-size: 375px;
+  background-position: top;
+  background-size: 100%;
 }
 
-main header {
+.container {
+  padding: 3.5rem 3rem 1rem 3rem;
+  overflow: hidden;
+  min-width: 17rem;
+  min-height: 100vh;
   display: flex;
-  justify-content: center;
+  flex-direction: column;
 }
-main header img {
-  margin: 28px 0 56px -150px;
-  width: 150px;
+.container .header {
+  align-self: start;
 }
-main article {
+.container .header img {
+  width: 12rem;
+}
+.container .box-content {
+  margin-top: 4.5rem;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
 }
-main article img {
-  width: 300px;
-  margin-bottom: 65px;
+.container .box-content img {
+  width: 83.5vw;
 }
-main article .texts {
+.container .box-content .content-texts {
+  padding: 0 1rem;
+  margin-top: 6rem;
   display: flex;
   flex-direction: column;
   align-items: center;
-  color: #fff;
-  font-family: "Open Sans", sans-serif;
 }
-main article .texts h1 {
-  font-family: "Poppins", sans-serif;
-  font-size: 25px;
+.container .box-content .content-texts .title, .container .box-content .content-texts .paragraph {
+  color: var(--white);
+  text-align: center;
+}
+.container .box-content .content-texts .title {
+  font-family: var(--Poppins);
+  font-size: 2.18rem;
   font-weight: 600;
-  text-align: center;
-  margin-bottom: 14px;
+  opacity: 0.9;
 }
-main article .texts p {
+.container .box-content .content-texts .paragraph {
+  margin-top: 1.3rem;
+  font-family: var(--open_Sans);
   font-weight: 400;
-  text-align: center;
-  font-size: 18px;
-  line-height: 28px;
-  padding: 0 19px;
-  margin-bottom: 30px;
+  font-size: 1.3rem;
+  letter-spacing: 0.01rem;
+  line-height: 2.2rem;
+  padding: 0 1.9rem;
+  opacity: 0.8;
 }
-main article .texts button {
-  width: 190px;
-  height: 50px;
+.container .box-content .content-texts button {
+  margin-top: 2.5rem;
+  width: 23rem;
+  height: 4rem;
   color: var(--violet);
-  background-color: #fff;
+  background-color: var(--white);
+  font-family: var(--Poppins);
+  font-weight: 400;
+  font-size: 1.3rem;
+  letter-spacing: 0.1rem;
   border: none;
-  border-radius: 35px;
-  box-shadow: 0px 6px 10px rgba(0, 0, 0, 0.2);
-  font-size: 14px;
-  margin-bottom: 65px;
+  border-radius: 3.5rem;
+  box-shadow: 0 0.8rem 2.5rem rgba(0, 0, 0, 0.2);
+  cursor: pointer;
 }
-main article .texts button:hover {
+.container .box-content .content-texts button:hover {
   background-color: var(--Soft_Magenta);
-  color: white;
+  color: var(--white);
 }
-main footer {
-  padding: 15px 0;
+.container footer {
+  margin-top: 6rem;
+  padding: 1rem 0;
 }
-main footer ul {
+.container footer ul {
   display: flex;
-  gap: 13px;
+  -moz-column-gap: 1.3rem;
+       column-gap: 1.3rem;
+  align-items: center;
   justify-content: center;
 }
-main footer ul li {
+.container footer ul li {
+  cursor: pointer;
   list-style: none;
-  font-size: 20px;
+  font-size: 2rem;
   color: #fff;
-  border: 1px solid #fff;
+  border: 0.1rem solid #fff;
   border-radius: 50%;
 }
-main footer ul li span {
+.container footer ul li span {
   display: flex;
-  padding: 8px;
+  padding: 0.9rem;
 }
-main footer ul li:hover {
+.container footer ul li:hover {
   color: var(--Soft_Magenta);
-  border: 1px solid var(--Soft_Magenta);
+  border: 0.1rem solid var(--Soft_Magenta);
 }
 
-@media only screen and (min-width: 376px) {
-  body {
-    background-size: 767px;
-  }
-  main article .texts h1 {
-    padding: 0 24px;
-  }
-  main article .texts p {
-    padding: 0 20px;
-  }
-  main footer {
-    padding: 15px 0;
-  }
-}
-@media only screen and (min-width: 768px) {
-  body {
-    background-size: 894px;
-  }
-  main header img {
-    margin: 28px 0 56px -280px;
-    width: 150px;
-  }
-  main article img {
-    width: 450px;
-  }
-  main article .texts button {
-    font-size: 16px;
-    width: 200px;
-    height: 55px;
-  }
-  main footer {
-    margin: -50px 0 0 0;
-  }
-}
-@media only screen and (min-width: 894px) {
+@media (min-width: 450px) {
   body {
     background-image: url(../images/bg-desktop.svg);
-    background-repeat: no-repeat;
-    background-size: 1504px;
+    background-size: cover;
+    background-position: right;
   }
-  main header {
-    justify-content: flex-start;
+  .container .box-content img {
+    width: 65vw;
   }
-  main header img {
-    margin: 40px 0 70px 50px;
+  .container .box-content .content-texts .title {
+    font-size: 3rem;
+    max-width: 60rem;
   }
-  main article img {
-    width: 500px;
-  }
-  main article .texts p {
-    padding: 0 100px;
+  .container .box-content .content-texts .paragraph {
+    max-width: 47rem;
+    font-size: 1.5rem;
+    line-height: 2.5rem;
   }
 }
-@media only screen and (min-width: 1160px) {
-  main article {
-    padding: 0 90px;
+@media (min-width: 714px) {
+  .container {
+    padding: 4rem 6rem 1rem 6rem;
+  }
+  .container .header img {
+    width: 16rem;
+  }
+  .container .box-content {
+    margin-top: 7rem;
     display: grid;
-    column-gap: 40px;
-    grid-template-columns: repeat(7, 1fr);
+    grid-template-columns: 1fr 1fr;
+    -moz-column-gap: 4rem;
+         column-gap: 4rem;
   }
-  main article img {
-    width: 540px;
-    grid-column: 1/4;
+  .container .box-content img {
+    width: 50vw;
   }
-  main article .texts {
+  .container .box-content .content-texts {
+    padding: 0;
+    margin-top: 5.5rem;
     align-items: flex-start;
-    grid-column: 4/8;
+    align-self: flex-start;
   }
-  main article .texts h1 {
-    font-size: 36px;
-    max-width: 400px;
+  .container .box-content .content-texts .title, .container .box-content .content-texts .paragraph {
     text-align: left;
-    padding: 0 0 0 0;
   }
-  main article .texts p {
-    text-align: left;
-    padding: 0 0 0 0;
-    max-width: 525px;
-    line-height: 30px;
+  .container .box-content .content-texts .paragraph {
+    margin-top: 2.2rem;
+    padding: 0;
   }
-  main footer {
-    margin-top: 110px;
+  .container .box-content .content-texts button {
+    margin-top: 3rem;
+    width: 20rem;
+    height: 5.3rem;
+    font-size: 1.5rem;
   }
-  main footer ul {
-    justify-content: end;
-    margin-right: 68px;
+  .container footer {
+    margin-top: 5rem;
+    align-self: flex-end;
   }
 }
-@media only screen and (min-width: 1440px) {
-  body {
-    background-size: 1265px;
+@media (min-width: 1200px) {
+  .container .box-content img {
+    width: 46vw;
   }
-  main header img {
-    margin: 40px 0 70px 70px;
+  .container .box-content .content-texts .title {
+    line-height: 6.5rem;
+    letter-spacing: 0.1rem;
+    font-size: 4.8rem;
   }
-  main article {
-    padding: 0 70px;
-  }
-  main article img {
-    width: 690px;
-  }
-  main article .texts {
-    margin-bottom: 96px;
-  }
-  main footer {
-    margin: 0;
+  .container .box-content .content-texts .paragraph {
+    font-size: 1.6rem;
+    line-height: 2.8rem;
   }
 }/*# sourceMappingURL=style.css.map */
