--- a/css/style.scss
+++ b/css/style.scss
@@ -1,79 +1,100 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans&family=Poppins:wght@400;600&display=swap');
+
 :root{
     --violet: hsl(257, 40%, 49%);
     --Soft_Magenta: hsl(300, 69%, 71%);
+    --white: hsl(0, 0%, 100%);
+    --open_Sans: 'Open Sans', sans-serif;
+    --Poppins: 'Poppins', sans-serif;
+}
+
+html{
+    font-size: 62.5%;
 }
 
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    transition: all 0.5s ease-in-out;
 }
 body{
     background-color:var(--violet);
     background-image: url(../images/bg-mobile.svg);
     background-repeat:no-repeat;
-    background-size:375px;
-     
+    background-position: top;
+    background-size: 100%;
 }
 
-main{
-    header{
-        display: flex;
-        justify-content: center;
-        
+.container{
+    padding: 3.5rem 3rem 1rem 3rem;
+    overflow: hidden;
+    min-width: 17rem;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    .header{
+        align-self: start;
         img{
-            margin: 28px 0 56px -150px;
-            width:150px;
+            width:12rem;
         }
+        
     }
-    article{
+    .box-content{
+        margin-top: 4.5rem;
         display: flex;
         flex-direction: column;
         justify-content:center;
         align-items:center;
         img{
-            width: 300px; 
-            margin-bottom: 65px;
+            width: 83.5vw;
         }
 
-        .texts{
+        .content-texts{
+            padding: 0 1rem;
+            margin-top: 6rem;
             display: flex;
             flex-direction: column;
             align-items: center;
-            color : #fff;
-            font-family: 'Open Sans', sans-serif;
-            h1{
-                font-family: 'Poppins', sans-serif;
-                font-size: 25px;
-                font-weight:600;
+
+            .title,.paragraph{
+                color: var(--white);
                 text-align: center;
-                margin-bottom:14px
             }
-            p{
-               
+            .title{
+                font-family: var(--Poppins);
+                font-size: 2.18rem;
+                font-weight:600;
+                opacity: 0.9;
+            }
+            .paragraph{
+                margin-top: 1.3rem;
+                font-family: var(--open_Sans);
                 font-weight: 400;
-                text-align:center;
-                font-size:18px;
-                line-height: 28px;
-                padding: 0 19px;   
-                margin-bottom: 30px;
+                font-size:1.3rem;
+                letter-spacing: 0.01rem;
+                line-height: 2.2rem;
+                padding: 0 1.9rem;   
+                opacity: 0.8;
             }
 
             button{
-                width: 190px;
-                height: 50px;
+                margin-top: 2.5rem;
+                width: 23rem;
+                height: 4rem;
                 color: var(--violet);
-                background-color:#fff;
+                background-color:var(--white);
+                font-family: var(--Poppins);
+                font-weight: 400;
+                font-size: 1.3rem;
+                letter-spacing: 0.1rem;
                 border: none;
-                border-radius: 35px;
-                box-shadow: 0px 6px 10px rgba(0, 0, 0,0.2);
-                font-size: 14px;
-                margin-bottom: 65px;
-
+                border-radius: 3.5rem;
+                box-shadow: 0 0.8rem 2.5rem rgba(0, 0, 0,0.2);
+                cursor: pointer;
                 &:hover{
                     background-color: var(--Soft_Magenta);
-                    color: white;
+                    color: var(--white);
                 }
             }
           
@@ -81,179 +102,123 @@ main{
     }
 
     footer{
-        padding: 15px 0;
+        margin-top: 6rem;
+        padding: 1rem 0;
         ul{
             display: flex;
-            gap: 13px;
+            column-gap: 1.3rem;
+            align-items: center;
             justify-content: center;
             li{ 
+                cursor: pointer;
                 list-style: none;
-                font-size:20px;
+                font-size:2rem;
                 color: #fff;
-                border: 1px solid #fff;
+                border: 0.1rem solid #fff;
                 border-radius:50%;
                 span{
-
                     display: flex;
-                    padding: 8px;
+                    padding: 0.9rem;
                 }
                 &:hover{
                     color: var(--Soft_Magenta);
-                     border: 1px solid var(--Soft_Magenta);
+                    border: 0.1rem solid var(--Soft_Magenta);
                 }
             }
         }
     }
 }
 
-@media only screen and (min-width: 376px){
-    body {
-        background-size: 767px;
+
+@media(min-width:450px){
+    body{
+        background-image: url(../images/bg-desktop.svg);
+        background-size: cover;
+        background-position: right;
     }
-    main{
-        article{
+
+    .container{
+        .box-content{
+            img{
+                width: 65vw;
+            }
+            .content-texts{
+                .title{
+                    font-size: 3rem;
+                    max-width: 60rem;
+                }
+                .paragraph{
+                    max-width: 47rem;
+                    font-size: 1.5rem;
+                    line-height: 2.5rem;
+                }
+            }
            
-            .texts{
-                h1{
-                    padding: 0 24px;
-                }
-                p{
-                    padding: 0 20px;
-                }
-            }
-        }
-
-        footer{
-            padding: 15px 0;
         }
     }
 }
 
-@media only screen and (min-width:768px){
-    body{
-        background-size: 894px;
-    }
-    main{
-        header{
-       
+@media(min-width:714px){
+   
+    .container{
+        padding: 4rem 6rem 1rem 6rem;
+        .header{
             img{
-                margin: 28px 0 56px -280px;
-                width:150px;
+                width: 16rem;
             }
         }
-
-        article{
-            img{
-                width: 450px;
-            }
-            .texts{
-                button{
-                    font-size:16px;
-                    width: 200px;
-                    height: 55px;
-                }
-            }
-            
-        }
-
-        footer{
-            margin: -50px 0 0 0;    
-        }
-    }
-}
-
-@media only screen and (min-width: 894px){
- body{
-    background-image: url(../images/bg-desktop.svg);
-    background-repeat: no-repeat;
-    background-size: 1504px;
- }   
-
- main{
-    header{ 
-        justify-content: flex-start;
-        img{
-            margin:40px 0 70px 50px;
-        }
-
-    }
-    article{
-        img{
-            width: 500px;
-        }        
-        .texts{
-            p{
-                padding:0 100px;
-            }
-        }
-    }
- }
-}
-
-@media only screen and (min-width:1160px){
-    main{
-        article{
-            padding: 0 90px;
+        .box-content{
+            margin-top: 7rem;
             display: grid;
-            column-gap: 40px;
-            grid-template-columns: repeat(7,1fr);
-        
+            grid-template-columns: 1fr 1fr;
+            column-gap: 4rem;
             img{
-                width: 540px;
-                grid-column: 1/4;
+                width: 50vw;
             }
-            .texts{
+            .content-texts{
+                padding: 0;
+                margin-top: 5.5rem;
                 align-items: flex-start;
-                grid-column:4/8;
-                h1{
-                    font-size: 36px;
-                    max-width: 400px;
+                align-self: flex-start;
+                .title,.paragraph{
                     text-align: left;
-                    padding: 0 0 0 0;
-
                 }
-                p{
-                    text-align: left;
-                    padding: 0 0 0 0;
-                    max-width: 525px;
-                    line-height: 30px;
+                .paragraph{
+                    margin-top: 2.2rem;
+                    padding: 0;
+                }
+                button{
+                    margin-top: 3rem;
+                    width: 20rem;
+                    height: 5.3rem;
+                    font-size: 1.5rem;
                 }
             }
         }
-
         footer{
-            margin-top:110px;
-            ul{
-                justify-content: end;
-                margin-right: 68px;
-            }
+            margin-top: 5rem;     
+            align-self: flex-end;
         }
     }
 }
 
-@media only screen and (min-width:1440px){
-    body{
-        background-size: 1265px;
-    }
-    main{
-        header {
+@media(min-width:1200px){
+    .container{
+        .box-content{
             img{
-                margin:40px 0 70px 70px;
+                width: 46vw;
             }
-        }
-        article{
-            
-            padding:0 70px;
-            img{
-                width:690px;
+            .content-texts{
+                .title{
+                    line-height: 6.5rem;
+                    letter-spacing: 0.1rem;
+                    font-size: 4.8rem;
+                }
+                .paragraph{
+                    font-size: 1.6rem;
+                    line-height: 2.8rem;
+                }
             }
-            .texts{
-                margin-bottom: 96px;
-            }
-        }
-        footer{
-            margin:0;
         }
     }
-    
 }
